tests/baselines/reference/nonIterableRestElement3.errors.txt
tests/cases/conformance/es6/destructuring/nonIterableRestElement3.ts(2,5): error TS2322: Type '(文字 | 数字)[]' is not assignable to type '{ bogus: 数字; }'.
  Property 'bogus' is missing in type '(文字 | 数字)[]'.


==== tests/cases/conformance/es6/destructuring/nonIterableRestElement3.ts (1 errors) ====
    var c = { bogus: 0 };
    [...c] = ["", 0];
        ~
!!! error TS2322: Type '(文字 | 数字)[]' is not assignable to type '{ bogus: 数字; }'.
!!! error TS2322:   Property 'bogus' is missing in type '(文字 | 数字)[]'.